Fixed horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-
+@charset "UTF-8";
 #head {
     
 }
 
 body {
     font-family: "Circular","Helvetica Neue",Helvetica,Arial,sans-serif;
-
+    overflow: hidden;
 
 }
 
@@ -17,28 +17,29 @@ body {
 }
 
 .col-md-12 {
-
+    margin: 0;
+    padding: 0;
 }
 
-#navigation {
+.navigation {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 
-#navigation li:hover {
+.navigation li:hover {
     text-decoration: underline;
     text-decoration-color: greenyellow;
     transition: all .25s ease-in-out;
 }
 
-#navigation li{
+.navigation li{
     height: 50px;
    display: inline-block;
 }
 
-#navigation p {
+.navigation p {
     font-family: "Georgia", Times, serif;
     font-weight: bold;
     font-variant: small-caps;
@@ -47,7 +48,7 @@ body {
     margin-left: 85%;
 }
 
-#navigation li a {
+.navigation li a {
     display: block;
     color: white;
     text-align: center;
@@ -55,6 +56,11 @@ body {
     text-decoration: none;
     font-weight: bold;
     font-size: 15px;
+}
+
+.navBar {
+    padding: 0;
+    margin: 0;
 }
 
 .right li {
@@ -98,7 +104,7 @@ body {
     margin: 0 auto;
 }
 
-.navBar {
+.navigation {
     background-image: url("http://tksimages.files.wordpress.com/2013/10/dsc_0286_1.jpg");
     background-size: 100% 700px;
     width: 100%;
